--- a/app/components/Choice.module.scss
+++ b/app/components/Choice.module.scss
@@ -1,20 +1,17 @@
 .box{
     // width: 200px;
-    padding: 5px;
+    padding: 10px;
     cursor: pointer;
 
     &:hover{
-        background-color: #7a7a7a;
-        border-radius: 5px;
+        background-color: #e4e3e3;
+
     }
     // border-radius: 10px;
 
 }
 .colored {
-    background-color: #eee;
-    // border-radius: 5px;
+    background-color: #EEF4FC;
     cursor: pointer;
-    // &:hover{
-    //     background-color: blue;
-    // }
+
 }
